Add creator dashboard API for viewing own projects